--- a/app/src/main/res/layout/fragment_engineering_mode.xml
+++ b/app/src/main/res/layout/fragment_engineering_mode.xml
@@ -23,8 +23,8 @@
             android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginTop="5dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
+
+            android:layout_marginStart="10dp"
             android:layout_alignParentTop="true"
         />
 
@@ -35,6 +35,7 @@
             android:text="      "
             android:maxLength="6"
             android:textSize="16sp"
+            android:textStyle="bold"
             android:layout_marginTop="1dp"
             android:layout_toEndOf="@id/id_Pressure_Gate_Description"
             android:layout_alignBottom="@id/id_Pressure_Gate_Description"
@@ -48,9 +49,8 @@
             android:text="手环编号："
             android:textStyle="bold"
             android:textSize="16sp"
-
             android:layout_toEndOf="@id/id_Pressure_Gate_Value"
-            android:layout_marginStart="80dp"
+            android:layout_marginStart="60dp"
             android:layout_alignBottom="@id/id_Pressure_Gate_Description"/>
 
         <EditText
@@ -59,6 +59,8 @@
             android:id="@+id/id_MaterialNum_Setting_Value"
             android:text="      "
             android:maxLength="6"
+            android:textStyle="bold"
+            android:inputType="number"
             android:textSize="16sp"
             android:layout_toEndOf="@id/id_MaterialNum_Setting_Description"
             android:layout_alignBottom="@id/id_MaterialNum_Setting_Description"
@@ -83,6 +85,7 @@
             android:text="      "
             android:textStyle="bold"
             android:textSize="16sp"
+            android:inputType="number"
             android:layout_toEndOf="@id/id_T1_Gate_Description"
             android:layout_alignBottom="@id/id_T1_Gate_Description"/>
 
@@ -105,7 +108,7 @@
             android:text="      "
             android:textStyle="bold"
             android:textSize="16sp"
-
+            android:inputType="number"
             android:layout_toEndOf="@id/id_T2_Gate_Description"
             android:layout_alignBottom="@id/id_T2_Gate_Description"
             />
