1, parameter settings, except for material number. 2, reset

--- a/app/src/main/res/layout/fragment_engineering_mode.xml
+++ b/app/src/main/res/layout/fragment_engineering_mode.xml
@@ -19,24 +19,23 @@
             android:id="@+id/id_Pressure_Gate_Description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="压力门限："
+            android:text="压力门限(M)："
             android:textStyle="bold"
             android:textSize="16sp"
-            android:layout_marginTop="5dp"
-
+            android:layout_marginTop="24dp"
             android:layout_marginStart="10dp"
             android:layout_alignParentTop="true"
         />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:id="@+id/id_Pressure_Gate_Value"
-            android:text="      "
-            android:maxLength="6"
+            android:maxLength="4"
+            android:hint="1~4"
             android:textSize="16sp"
+            android:inputType="numberDecimal"
             android:textStyle="bold"
-            android:layout_marginTop="1dp"
             android:layout_toEndOf="@id/id_Pressure_Gate_Description"
             android:layout_alignBottom="@id/id_Pressure_Gate_Description"
             />
@@ -50,18 +49,19 @@
             android:textStyle="bold"
             android:textSize="16sp"
             android:layout_toEndOf="@id/id_Pressure_Gate_Value"
-            android:layout_marginStart="60dp"
+            android:layout_marginStart="10dp"
             android:layout_alignBottom="@id/id_Pressure_Gate_Description"/>
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:id="@+id/id_MaterialNum_Setting_Value"
-            android:text="      "
-            android:maxLength="6"
+            android:maxLength="5"
             android:textStyle="bold"
             android:inputType="number"
+            android:hint="0~65535"
             android:textSize="16sp"
+            android:layout_marginStart="5dp"
             android:layout_toEndOf="@id/id_MaterialNum_Setting_Description"
             android:layout_alignBottom="@id/id_MaterialNum_Setting_Description"
             />
@@ -70,22 +70,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/id_T1_Gate_Description"
-            android:text="时间门限T1:"
+            android:text="时间门限T1(min): "
             android:textStyle="bold"
             android:textSize="16sp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="16dp"
             android:layout_below="@+id/id_Pressure_Gate_Description"
             android:layout_alignStart="@+id/id_Pressure_Gate_Description"
             />
 
         <EditText
             android:id="@+id/id_T1_Gate_Value"
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:text="      "
             android:textStyle="bold"
             android:textSize="16sp"
+            android:hint="0~240"
             android:inputType="number"
+            android:maxLength="3"
             android:layout_toEndOf="@id/id_T1_Gate_Description"
             android:layout_alignBottom="@id/id_T1_Gate_Description"/>
 
@@ -93,21 +94,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/id_T2_Gate_Description"
-            android:text="时间门限T2:"
+            android:text="持续时间门限T2(S): "
             android:textStyle="bold"
             android:textSize="16sp"
-            android:layout_alignTop="@id/id_T1_Gate_Description"
-            android:layout_alignStart="@id/id_MaterialNum_Setting_Description"
-            android:layout_toEndOf="@id/id_T1_Gate_Value"
+            android:layout_marginTop="16dp"
+            android:layout_alignStart="@id/id_Pressure_Gate_Description"
+            android:layout_below="@id/id_T1_Gate_Description"
+
             />
 
         <EditText
             android:id="@+id/id_T2_Gate_Value"
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:text="      "
             android:textStyle="bold"
             android:textSize="16sp"
+            android:maxLength="3"
+            android:hint="30~100"
             android:inputType="number"
             android:layout_toEndOf="@id/id_T2_Gate_Description"
             android:layout_alignBottom="@id/id_T2_Gate_Description"
@@ -117,19 +120,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/id_Audio_Duration_Description"
-            android:text="音频信号持续时间："
+            android:text="音频信号持续时间(min)："
             android:textSize="16sp"
-            android:layout_marginTop="5dp"
-            android:layout_below="@id/id_T1_Gate_Description"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp"
+            android:layout_below="@id/id_T2_Gate_Description"
             android:layout_alignStart="@id/id_Pressure_Gate_Description"
             />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:id="@+id/id_Audio_Duration_Value"
-            android:text="      "
+            android:maxLength="6"
+            android:hint="0~255"
             android:textStyle="bold"
+            android:inputType="number"
             android:textSize="16sp"
             android:layout_toEndOf="@id/id_Audio_Duration_Description"
             android:layout_alignBottom="@id/id_Audio_Duration_Description"/>
@@ -142,9 +148,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="设  置  参  数"
-        android:textSize="24sp"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:background="@color/GrayWhite"
         android:id="@+id/id_Setting_button"
         android:clickable="true"
+        android:layout_marginTop="3dp"
         android:layout_below="@id/id_Settings_Frame"
         android:layout_centerHorizontal="true"
         android:onClick="onButtonSettings"
@@ -152,13 +161,15 @@
 
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Command_Reset"
-        android:textSize="24sp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:id="@+id/id_Reset_button"
         android:clickable="true"
         android:onClick="onButtonReset"
+        android:layout_marginTop="5dp"
         android:layout_below="@id/id_Setting_button"
         android:layout_centerHorizontal="true"
         />
