--- a/app/src/main/res/layout/fragment_device_status.xml
+++ b/app/src/main/res/layout/fragment_device_status.xml
@@ -164,7 +164,7 @@
 
                 android:layout_gravity="center_vertical"
                 android:layout_toEndOf="@id/id_MaterialNum_Value"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="35dp"
                 android:layout_alignBottom="@id/id_MaterialNum_Chinese"/>
 
             <TextView
@@ -412,9 +412,9 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2016-11-22   11:11:11\n2016-11-22   11:11:11\n2016-11-22   11:11:11\n2016-11-22   11:11:11\n2016-11-22   11:11:11\n2016-11-22   11:11:11\n2016-11-22   11:11:11\n2016-11-22   11:11:11\n"
             android:inputType="textMultiLine"
-            android:maxLines="5"
+            android:maxLines="7"
+            android:lines="5"
             android:scrollbars="vertical"
             android:id="@+id/id_SendTimes_Message"
             android:textSize="16sp"
