--- a/app/src/main/res/layout/fragment_device_status.xml
+++ b/app/src/main/res/layout/fragment_device_status.xml
@@ -425,6 +425,7 @@
         android:layout_marginTop="3dp"
         android:inputType="textMultiLine"
         android:maxLines="4"
+        android:visibility="gone"
         android:layout_alignParentEnd="true" />
 
 
