1, add Set time Successfully pop up dialog; 2, add decimal edit to Audio setting.

--- a/app/src/main/res/layout/fragment_engineering_mode.xml
+++ b/app/src/main/res/layout/fragment_engineering_mode.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/id_Pressure_Gate_Value"
             android:maxLength="4"
-            android:hint="1~6"
+            android:hint="1.0~6.0"
             android:textSize="16sp"
             android:inputType="numberDecimal"
             android:textStyle="bold"
@@ -133,9 +133,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/id_Audio_Duration_Value"
             android:maxLength="6"
-            android:hint="0~255.00"
+            android:hint="0~255.0"
             android:textStyle="bold"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:textSize="16sp"
             android:layout_toEndOf="@id/id_Audio_Duration_Description"
             android:layout_alignBottom="@id/id_Audio_Duration_Description"/>
